--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-    command = 'CI = next build'
+    command = 'CI = npm run build'
      functions = 'netlify/functions'
      publish = ".next"
 
