--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-    command = 'npm run build'
+    command = 'next build'
      functions = 'netlify/functions'
      publish = ".next"
 
-
+[[plugins]]
+package = "@netlify/plugin-nextjs"
