--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-only-warn": "^1.0.3",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.5",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "@netlify/plugin-nextjs": "^4.7.0"
   }
 }
