--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Darkskittlz Website",
   "scripts": {
+    "start": "webpack --config webpack.config.js",
+    "webdev": "webpack-dev-server",
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "prettier": "prettier -write .",
@@ -27,12 +29,20 @@
     "three": "^0.139.2"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@netlify/plugin-nextjs": "^4.7.0",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.20.0",
     "eslint-config-next": "^12.2.2",
     "eslint-plugin-only-warn": "^1.0.3",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
-    "@netlify/plugin-nextjs": "^4.7.0"
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0"
   }
 }
