--- a/package.json
+++ b/package.json
@@ -35,14 +35,6 @@
     "eslint": "^8.20.0",
     "eslint-config-next": "^12.2.2",
     "eslint-plugin-only-warn": "^1.0.3",
-    "file-loader": "^1.1.6",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^5.5.0",
-    "prettier": "^2.7.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
+    "prettier": "^2.7.1"
   }
 }
